@@ -89,14 +89,13 @@ chip = {
   'adc' : 1,
   'dac' : 0,
   'saved_code' : {
-#   'address' : ((246 - 10) * 4096), # Bootloader takes pages 248-255, FS takes 246-247
-#  'page_size' : 4096,
-#   'pages' : 10,
-#   'flash_available' : 1024 - ((38 + 8 + 2 + 10)*4) # Softdevice uses 0x26=38 pages of flash, bootloader 8, FS 2, code 10. Each page is 4 kb.
-  'address' : 0x60000000, # put this in external spiflash (see below)
-  'page_size' : 4096,
-  'pages' : 2048, # Entire 8MB of external flash
-  'flash_available' : 1024 - ((38 + 8 + 2)*4) # Softdevice uses 31 pages of flash, bootloader 8, FS 2, code 10. Each page is 4 kb.
+    'address' : ((246 - 20) * 4096), # Bootloader takes pages 248-255, FS takes 246-247
+    'page_size' : 4096,
+    'pages' : 20,
+    'flash_available' : 1024 - ((38 + 8 + 2 + 20)*4), # Softdevice uses 0x26=38 pages of flash, bootloader 8, FS 2, code 20. Each page is 4 kb.
+
+    'address2' : 0x60000000, # put this in external spiflash (see below)
+    'pages2' : 2048, # Entire 8MB of external flash
   },
 };
 
